// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Product Resolvers) Product Review will be created with success message 1`] = `
Object {
  "message": "Review added successfully",
  "success": true,
}
`;

exports[`(Product Resolvers) Product will be created with success message 1`] = `
Object {
  "brand": "sample brand",
  "category": "sample category",
  "countInStock": 10,
  "description": "sample description",
  "image": "https://i.ibb.co/q9QZnkL/airpods.jpg",
  "name": "simple",
  "numReviews": 0,
  "price": 89.99,
  "rating": 0,
  "reviews": Array [],
}
`;

exports[`(Product Resolvers) Product will be deleted by the admin user with success message 1`] = `
Object {
  "message": "Product deleted successfully",
  "success": true,
}
`;

exports[`(Product Resolvers) Product will be deleted by the user with success message 1`] = `
Object {
  "message": "Product deleted successfully",
  "success": true,
}
`;
